# uhura

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/uhura-check/: Cargo.toml
crates/uhura-check/src/: assets.rs  authoring.rs  catalog.rs  checker.rs  checker_ir.rs  compile.rs  diagnostic.rs  evidence.rs  examples.rs  fixture.rs  icon_fonts.rs  infer.rs  lib.rs  lower.rs  manifest.rs  markup.rs  metadata.rs  parts.rs  pipeline.rs  preview.rs  project_lock.rs  project_manifest.rs  provenance.rs  replay.rs  resolve.rs  resource_manifest.rs  source.rs  style.rs  tests.rs  topology.rs  types.rs  updates.rs  v04.rs  v04_compile.rs  v04_evidence.rs  v04_parts.rs  v04_provenance.rs  v04_topology.rs  v04_updates.rs
crates/uhura-check/src/source/: references.rs  ui.rs
crates/uhura-check/src/ui_catalog/: elements.rs  mod.rs
crates/uhura-check/src/v04/: references.rs  ui.rs
crates/uhura-check/tests/: application_bridges.rs  assets.rs  comments.rs  compile.rs  contracts_corpus.rs  evidence.rs  icon_fonts.rs  instagram.rs  modules.rs  navigation.rs  packages.rs  parts.rs  programs.rs  project_lock.rs  project_manifest.rs  provenance.rs  returns.rs  standard.rs  ui.rs  v04_application_bridges.rs  v04_compile.rs  v04_differential.rs  v04_evidence.rs  v04_instagram.rs  v04_modules.rs  v04_packages.rs  v04_parts.rs  v04_programs.rs  v04_provenance.rs  v04_returns.rs  v04_standard.rs  v04_ui.rs
crates/uhura-cli/: Cargo.toml
crates/uhura-cli/src/: fsio.rs  lib.rs  main.rs
crates/uhura-cli/src/cmd/: TODO.md  check.rs  dev.rs  editor.rs  editor_model.rs  export.rs  fmt.rs  graph.rs  mod.rs  play.rs  project.rs  trace.rs
crates/uhura-cli/tests/: export.rs
crates/uhura-core/: Cargo.toml  clippy.toml
crates/uhura-core/src/: TODO.md  codec.rs  decode.rs  eval.rs  event.rs  evidence.rs  graph.rs  inspect.rs  ir.rs  lib.rs  provenance.rs  render.rs  route.rs  runtime.rs  state.rs  step.rs  template.rs  trace.rs  typed.rs  value.rs  view.rs
crates/uhura-core/tests/: eval_trace.rs  txn_matrix.rs
crates/uhura-fixture/: Cargo.toml
crates/uhura-fixture/src/: driver.rs  lib.rs  script.rs
crates/uhura-fixture/tests/: driver.rs
crates/uhura-host/: Cargo.toml
crates/uhura-host/src/: lib.rs  source.rs
crates/uhura-port/: Cargo.toml
crates/uhura-port/src/: canonical.rs  contract.rs  envelope.rs  lib.rs  load.rs  route.rs  standard.rs  types.rs
crates/uhura-project/: Cargo.toml
crates/uhura-project/src/: canvas-chrome.css  canvas-chrome.js  icons.rs  lib.rs  resolve.rs  source.rs  web_app.rs
crates/uhura-project/tests/: resolution.rs
crates/uhura-tests/: Cargo.toml  README.md
crates/uhura-tests/goldens/m2/: instagram-ir.json  reject-alt-xor-decorative.txt  reject-class-rooting-violation.txt  reject-controlled-promotion.txt  reject-decorative-is-a-marker.txt  reject-event-on-layout.txt  reject-image-text-alternative-required.txt  reject-legacy-image-element.txt  reject-legacy-text-field-element.txt  reject-missing-availability-arm.txt  reject-nested-interactive.txt  reject-non-exhaustive-union-match.txt  reject-unbound-required-prop.txt  reject-undeclared-component-emit.txt  reject-undefined-class-warning.txt  reject-unguarded-projection-read.txt  reject-unkeyed-each.txt  reject-unknown-element.txt  reject-unknown-icon.txt  reject-unreachable-handler.txt  reject-unresolved-name-did-you-mean.txt
crates/uhura-tests/goldens/m3/: v-bottom-nav-create-active.json  v-bottom-nav-feed-active.json  v-bottom-nav-profile-active.json  v-bottom-nav-reels-active.json  v-bottom-nav-search-active.json  v-comment-row-pending.json  v-comment-row-settled.json  v-comments-sheet-empty.json  v-comments-sheet-populated.json  v-connection-row-follow-action.json  v-connection-row-following.json  v-connection-row-pending.json  v-create-empty.json  v-create-loading.json  v-create-uploaded.json  v-feed-empty.json  v-feed-exhausted.json  v-feed-failed.json  v-feed-first-page.json  v-feed-loading.json  v-notice-bar-refusal.json  v-post-card-carousel-liked.json  v-post-card-image-post.json  v-post-card-like-pending.json  v-post-card-save-pending.json  v-post-card-video-post.json  v-post-card-video-poster.json  v-post-lena.json  v-post-loading.json  v-post-profile-history.json  v-profile-followers-lena.json  v-profile-followers-loading.json  v-profile-followers-mira.json  v-profile-following-lena.json  v-profile-following-loading.json  v-profile-following-mira.json  v-profile-header-follow-pending.json  v-profile-header-lena.json  v-profile-header-self.json  v-profile-lena-posts.json  (+20 more)
crates/uhura-tests/goldens/m4/: trace-comment-ok.jsonl  trace-feed-empty.jsonl  trace-feed-failed.jsonl  trace-like-ok.jsonl  trace-like-refused.jsonl  trace-paginate.jsonl  v-comments-sheet-composing.json  v-comments-sheet-empty-composing.json  v-comments-sheet-empty-pending.json  v-comments-sheet-pending-append.json  v-comments-sheet-rejected.json  v-create-choosing.json  v-create-composed.json  v-create-publish-refused.json  v-create-publishing.json  v-feed-appended.json  v-feed-comments-open.json  v-feed-like-pending.json  v-feed-like-refused.json  v-feed-load-failed.json  v-feed-load-pending.json  v-feed-save-pending.json  v-feed-unsave-pending.json  v-post-comments-open.json  v-post-like-pending.json  v-post-save-pending.json  v-profile-followers-follow-pending.json  v-profile-lena-tagged.json  v-profile-nils-reels.json  v-profile-nils-tagged-empty.json  v-profile-self-reels.json  v-profile-self-saved.json  v-profile-self-tagged.json  v-profile-tagged-empty.json  v-reels-like-pending.json  v-reels-save-pending.json  v-reels-unsave-pending.json  v-search-nils-results.json  v-search-no-results.json  v-search-searching.json  (+1 more)
crates/uhura-tests/src/: lib.rs
crates/uhura-tests/tests/: a0.rs  a0_v04.rs  acceptance_feed.rs  comments_authoring.rs  diagnostic_goldens.rs  instagram.rs  interaction_graph.rs  m2_gates.rs  m3_gates.rs  m4_gates.rs  purity.rs  ui_catalog.rs
crates/uhura-wasm/: Cargo.toml
crates/uhura-wasm/src/: lib.rs  session.rs
crates/uhura-wasm/tests/: abi_contract.rs  dispatch_scaling.rs
(+525 files in other folders)
