# The Uhura workspace. Cargo language commands are independently buildable;
# browser assets are separate build/package products (RFC 0002).
# Active incubation design: docs/spec/drafts/0.4/README.md.
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
# External — pinned here, exact versions locked by the committed Cargo.lock.
# serde_json: NEVER enable "preserve_order" — canonical JSON (sorted keys)
# depends on its default BTreeMap-backed maps (design §12, risk #2).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
toml = "0.8"
wasm-bindgen = "0.2"
cargo_metadata = "0.19"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
same-file = "1"
ttf-parser = "0.25"
brotli = "7"
wuff = { version = "0.2.8", default-features = false }
num-bigint = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2"
unicode-ident = "1"

# Internal
uhura-base = { path = "crates/uhura-base" }
uhura-syntax = { path = "crates/uhura-syntax" }
uhura-port = { path = "crates/uhura-port" }
uhura-check = { path = "crates/uhura-check" }
uhura-core = { path = "crates/uhura-core" }
uhura-editor-model = { path = "crates/uhura-editor-model" }
uhura-host = { path = "crates/uhura-host" }
uhura-cli = { path = "crates/uhura-cli" }

[workspace.lints.rust]
unsafe_code = "forbid"
