[package]
name = "uhura-check"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
uhura-base = { workspace = true }
uhura-syntax = { workspace = true }
uhura-port = { workspace = true, features = ["toml"] }
uhura-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
