[package]
name = "uhura-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
# Two binaries live here (`uhura` + the asset generator); bare `cargo run`
# means the CLI.
default-run = "uhura"

[lints]
workspace = true

[[bin]]
name = "uhura"
path = "src/main.rs"

# Validates materialized demo assets and renders deterministic seeded motifs.
[[bin]]
name = "gen-assets"
path = "src/bin/gen_assets.rs"

[dependencies]
uhura-base = { workspace = true }
uhura-syntax = { workspace = true }
uhura-check = { workspace = true }
uhura-core = { workspace = true }
uhura-project = { workspace = true }
uhura-host = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
toml = { workspace = true }
image = { workspace = true }
