[package]
name = "uhura-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
uhura-base = { workspace = true }
uhura-port = { workspace = true }   # envelopes only — toml feature OFF
serde = { workspace = true }
serde_json = { workspace = true }
