[package]
name = "uhura-fixture"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
uhura-base = { workspace = true }
uhura-port = { workspace = true, features = ["toml"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
