[package]
name = "uhura-port"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
toml = ["dep:toml"]

[dependencies]
uhura-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, optional = true }
