[package]
name = "uhura-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
uhura-base = { workspace = true }
uhura-syntax = { workspace = true }
uhura-port = { workspace = true, features = ["toml"] }
uhura-check = { workspace = true }
uhura-core = { workspace = true }
uhura-fixture = { workspace = true }
uhura-editor-model = { workspace = true }
uhura-cli = { workspace = true }
cargo_metadata = { workspace = true }
serde_json = { workspace = true }
