[package]
name = "uhura-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
uhura-base = { workspace = true }
uhura-syntax = { workspace = true }
uhura-check = { workspace = true }
uhura-core = { workspace = true }
uhura-host = { workspace = true }
uhura-project = { workspace = true }
cargo_metadata = { workspace = true }
serde_json = { workspace = true }
