[package]
name = "uhura-wasm"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uhura-base = { workspace = true }
uhura-core = { workspace = true }
uhura-port = { workspace = true }
wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
